@@ -6,6 +6,8 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+RH-2011-11-08-13: Enhancem.   check for ret value from AIX perfstat lib 
+
 RH-2011-11-08-13: Enhancem.   debug code in classic spooling under CLASSIC_DEBUG
 
 RH-2011-11-08-12: Enhancem.   PQS API cleanup
